# slimechain-algo-rs

./: .gitignore  Cargo.toml  README.md
examples/: base-input.json  cost-input.json  ef-input.json  prop-input.json  quality-input.json  reward-input.json  risk-input.json
samples/: musk_mode.rs
src/: lib.rs
